Handle project names with special characters, fix for nav height clipping off login modal.

--- a/client/src/app/nav/nav.component.scss
+++ b/client/src/app/nav/nav.component.scss
@@ -108,6 +108,10 @@ nav {
     }
   }
 
+  &.open {
+    height: 100%;
+  }
+
   .right {
     text-align: right;
     justify-content: flex-end;
@@ -126,8 +130,6 @@ nav {
     min-width: 50px;
 
     justify-content: space-evenly;
-
-    cursor: pointer;
 
     #lines {
       position: relative;
