--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -28,7 +28,6 @@
     justify-content: center;
     align-items: center;
     
-    z-index: 3;
     top: 0;
     left: 0;
     width: 100%;
@@ -50,6 +49,7 @@
 
         a.social {
             display: inline-flex;
+            cursor: pointer;
 
             justify-content: center;
             align-items: center;
