--- a/client/src/style/global.scss
+++ b/client/src/style/global.scss
@@ -175,7 +175,7 @@ h4 {
   justify-content: center;
   align-items: center;
 
-  z-index: 3;
+  z-index: 25;
   top: 0;
   left: 0;
   width: 100%;
@@ -244,6 +244,7 @@ h4 {
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      cursor: pointer;
     }
 
     form {
